chore: update gitignore for security and logs
- Exclude .env.properties with sensitive credentials
- Ignore app.log and nohup.out
- Prevent committing MongoDB URI and JWT secret

Security: Environment Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -66,10 +66,17 @@ out/
 .env
 .env.*
 *.env
+.env.properties
 *.key
 *.pem
 *.p12
 *.keystore
+
+###############################
+# Application logs
+###############################
+app.log
+nohup.out
 
 ###############################
 # Spring Boot (local overrides)
